# pve-auto-scripts

./: .gitignore  README.md  pyproject.toml
pve_backup_sync_to_nas/: README.md  config.example.toml  main.py
